--- a/r-feedstock/meta.yaml
+++ b/r-feedstock/meta.yaml
@@ -1,21 +1,36 @@
 {% set version = '3.4.1' %}
 
+{% set url = 'https://go.microsoft.com/fwlink/?linkid=852724' %}                        # [win64]
+{% set fn = 'SRO_3.4.1.0_1033.cab' %}                                                   # [win64]
+{% set shasum = 'cb2632c339ae5211cb3475bf33b8ad9c3159f410c11d34ffca85d0527f872985' %}   # [win64]
+
+{% set url = 'https://mran.blob.core.windows.net/install/mro/3.4.1/microsoft-r-open-3.4.1.pkg' %}  # [osx]
+{% set fn = 'microsoft-r-open-3.4.1.pkg' %}                                                        # [osx]
+{% set shasum = '643c5e953a02163ae73273da27f9c1752180f55bf836b127b6e1829fd1756fc8' %}              # [osx]
+
 package:
   name: r
   version: {{ version }}
 
 source:
-  fn: SRO_3.4.1.0_1033.cab
-  url: https://go.microsoft.com/fwlink/?linkid=852724
+  fn: {{ fn }}
+  url: {{ url }}
+  sha256: {{ shasum }}
+
+requirements:
+  build:
+    - python-libarchive-c
 
 outputs:
   - name: r-base
     version: {{ version }}
+    script: install-r-base.sh
 
   - name: r-matrix
     version: {{ version }}
     requirements:
       run:
         - {{ pin_subpackage('r-base', exact=True) }}
-    script: install-r-base.sh
+        - {{ pin_subpackage('r-lattice') }}
 
+    script: install-r-matrix.sh
