Started work on launcher.exe (using Wine when not on Windows)

--- a/r-feedstock/recipe/meta.yaml
+++ b/r-feedstock/recipe/meta.yaml
@@ -26,6 +26,8 @@ source:
 requirements:
   build:
     - python-libarchive-c
+  host:
+    - m2w64-toolchain  # [win]
 
 outputs:
   - name: mro-base
